<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gaoshihui.LoginActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorInputText"
        android:theme="@style/AppTheme"
        android:elevation="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_account"
            android:layout_margin="10dp"
            android:hint="@string/login_hint_email"
            android:elevation="0dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_margin="10dp"
            android:hint="@string/login_hint_password"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:elevation="0dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp">

            <Button
                android:text="@string/login_button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_sign_in"
                android:layout_weight="1" />

            <Button
                android:text="@string/login_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_login"
                android:layout_weight="1"
                android:nextFocusDown="@id/login_button_sign_in"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_forgotten"
            android:text="@string/login_forgotten_password"
            android:textSize="14sp"
            android:clickable="true"
            android:textColor="?android:attr/textColorLink"
            android:textAlignment="textEnd"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:elevation="6dp" />


    </LinearLayout>

</RelativeLayout>
