<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gaoshihui.SignInActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorInputText"
        android:elevation="6dp"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/sign_in_account"
                android:hint="@string/login_hint_email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/expecting"
                    android:id="@+id/sign_in_if_repeat"
                    android:elevation="5dp" />
            </GridLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/sign_in_password"
            android:layout_margin="10dp"
            android:hint="@string/login_hint_password"
            android:fontFamily="sans-serif"
            android:inputType="textPassword" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp">

            <GridLayout
                android:layout_width="177dp"
                android:layout_height="match_parent">

            </GridLayout>

            <Button
                android:text="@string/sign_in_button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_button_sign_in"
                android:layout_weight="1"
                android:elevation="2dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
